// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > .getSchema() > should return the negative response schema 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "error": {
      "_type": "ZodObject",
      "shape": {
        "message": {
          "_type": "ZodString",
        },
      },
    },
    "status": {
      "_type": "ZodLiteral",
      "value": "error",
    },
  },
}
`;

exports[`Endpoint > .getSchema() > should return the positive response schema 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "data": {
      "_type": "ZodObject",
      "shape": {
        "something": {
          "_type": "ZodNumber",
        },
      },
    },
    "status": {
      "_type": "ZodLiteral",
      "value": "success",
    },
  },
}
`;

exports[`Endpoint > Feature #600: Top level refinements > should accept valid inputs 1`] = `"{"status":"success","data":{}}"`;

exports[`Endpoint > Feature #600: Top level refinements > should fail during the refinement of invalid inputs 1`] = `"{"status":"error","error":{"message":"Please provide at least one property"}}"`;

exports[`Endpoint > Issue #654: Top level refinements > should accept valid inputs 1`] = `"{"status":"success","data":{}}"`;

exports[`Endpoint > Issue #654: Top level refinements > should fail during the refinement of invalid inputs 1`] = `"{"status":"error","error":{"message":"dynamicValue: type1Attribute is required if type is type1"}}"`;
